# tkinter_exemplo

./: .gitignore  README.md  app.py  clientes.db  pyproject.toml
